--- a/BaiThi/appsettings.json
+++ b/BaiThi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ComicSystemDatabase": "Server=localhost;Database=ComicSystem;User=root;Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
